== 2.8.1 ==
Release date: 
* Enhancement: Dual Heading - Moved Spacing option to content tab and reorganised the style options
* Fixed: Unnecessary call to frontend.min.css file

== 2.8.0 ==
Release date: October 30, 2024
* New: Interactive Circle widget
* New: Progress Bar widget
* Enhancement: Display Conditions - Added new Device Type display condition
* Enhancement: Added additional size units and custom units to all the widgets and extensions
* Enhancement: Conditionally loading widget styles only when the respective widgets are used
* Enhancement: Gravity Forms - Added options to style sub-labels
* Enhancement: Gravity Forms - Added options to style required text
* Enhancement: Info Box - Added option to change button width
* Enhancement: Info Box - Added option to change button icon spacing
* Enhancement: Info Box - Added option to change button icon size
* Enhancement: Image Comparison - Removed dependency on twentytwenty library
* Fixed: Divider - Icon Rotation option
* Fixed: Removed unnecessary calls to odometer lib files

== 2.7.28 ==
Release date: September 13, 2024
* Fixed: Info Box - Selector for icon hover style options
* Fixed: Info List - Some of the style controls were not responsive
* Fixed: Image Comparison - Divider width was not working for vertical layout
* Fixed: Dual Heading - Default spacing between headings
* Fixed: Counter - Position of prefix and suffix was not inline

== 2.7.27 ==
Release date: August 20, 2024
* Fixed: Gravity Forms - Submit Button styling options were not working when button is set to inline position
* Fixed: Gravity Forms - Submit Button full width option
* Fixed: Posts - Row Spacing option

== 2.7.26 ==
Release date: July 17, 2024
* Fixed: Instagram Feed - PHP error

== 2.7.25 ==
Release date: July 16, 2024
* Fixed: Posts - JS error with load more pagination
* Fixed: Gravity Forms - Submit Margin Top option
* Fixed: Info Grid & Carousel - Center Slides option was not working on frontend

== 2.7.24 ==