@@ -1,6 +1,7 @@
 == 2.8.1 ==
 Release date: 
 * Enhancement: Dual Heading - Moved Spacing option to content tab and reorganised the style options
+* Enhancement: Pricing Table - Added responsive support for Tooltip position option
 * Fixed: Unnecessary call to frontend.min.css file
 
 == 2.8.0 ==
